Added missing import.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<link rel="icon" sizes="192x192" href="https://docs.google.com/drawings/d/e/2PACX-1vS9vABXBpNkgVVQ5PfPKOsBkYSnjJYmup-phMENEU_apPcuV-XFsuDci61ziInPZphDboMW1EmfzyUy/pub?w=192&h=192">
 
+		<!-- Imports -->
+		<script type="text/javascript" src="/generics/PostManager.js"></script>
+		<!-- /Imports -->
+
 		<link rel="stylesheet" href="/Minesweeper/Stylesheet.css">
 		<script type="text/javascript" src="/Minesweeper/JavaScript.js"></script>
-
 
 		<link rel="stylesheet" href="/login/stylesheets/Small.css">
 		<script src="/login/JavaScript.js" async defer></script>
