Moved "/generics/" to chrisacrobat.github.io/js-compilation

--- a/Higescore/Global/index.html
+++ b/Higescore/Global/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="/Minesweeper/Higescore/Stylesheet.css">
 
 		<!-- Imports -->
-		<script type="text/javascript" src="/generics/PostManager.js"></script>
+		<script type="text/javascript" src="https://chrisacrobat.github.io/js-compilation/PostManager.js"></script>
 		<!-- /Imports -->
 
 		<script type="text/javascript" src="/Minesweeper/JavaScript.js"></script>
