--- a/Multiplayer/index.html
+++ b/Multiplayer/index.html
@@ -26,7 +26,7 @@
 
 		<div>
 			<input type="button" value="Start new game" onclick="generate()"/>
-			<input id="quickGame" type="checkbox" onclick="saveCookie_quickGame()">Disable animation</input>
+			<input id="quickGame" type="checkbox" onclick="saveState_quickGame()">Disable animation</input>
 			<input id="enableZoom" type="checkbox" onclick="resizeScreen()" checked>Enable zoom</input>
 		</div>
 
