--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<input type="button" value="Start new game" onclick="generate()"/>
 			<input type="button" value="Restart" onclick="restart()"/>
 			<input id="playerName" type="text" oninput="savePlayerName()" value="Player"/>
-			<input id="quickGame" type="checkbox" onclick="saveCookie_quickGame()">Disable animation</input>
+			<input id="quickGame" type="checkbox" onclick="saveState_quickGame()">Disable animation</input>
 		</div>
 
 		<p>Markers: <span id="markCounter">0</span> (<span id="mineCounter">0</span>)</p>
