Disabled global high score.

--- a/Higescore/Global/index.html
+++ b/Higescore/Global/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="/Minesweeper/Stylesheet.css">
 		<link rel="stylesheet" href="/Minesweeper/Higescore/Stylesheet.css">
 
+		<script>alert('This page is currently disabled.'); location.href = '/Minesweeper/Higescore/'</script><!-- // Disabled. Maybe reactivated in the future. -->
 		<script type="text/javascript" src="/Minesweeper/JavaScript.js"></script>
 	</head>
 
