--- a/Higescore/index.html
+++ b/Higescore/index.html
@@ -15,7 +15,7 @@
 	</head>
 
 	<body onload="onload('LOCAL_HIGESCORE')">
-		<a href="/Minesweeper/Higescore/Global/">All global top plays.</a>
+		<!--<a href="/Minesweeper/Higescore/Global/">All global top plays.</a> // Disabled. Maybe reactivated in the future. -->
 		<div id="wrapper"></div>
 	</body>
 </html>
