--- a/Highscore/index.html
+++ b/Highscore/index.html
@@ -10,13 +10,12 @@
 		<link rel="icon" sizes="192x192" href="https://docs.google.com/drawings/d/e/2PACX-1vS9vABXBpNkgVVQ5PfPKOsBkYSnjJYmup-phMENEU_apPcuV-XFsuDci61ziInPZphDboMW1EmfzyUy/pub?w=192&h=192">
 
 		<link rel="stylesheet" href="/Minesweeper/Stylesheet.css">
-		<link rel="stylesheet" href="/Minesweeper/Higescore/Stylesheet.css">
-
-		<script>alert('This page is currently disabled.'); location.href = '/Minesweeper/Higescore/'</script><!-- // Disabled. Maybe reactivated in the future. -->
+		<link rel="stylesheet" href="/Minesweeper/Highscore/Stylesheet.css">
 		<script type="text/javascript" src="/Minesweeper/JavaScript.js"></script>
 	</head>
 
-	<body onload="onload('GLOBAL_HIGESCORE')">
+	<body onload="onload('LOCAL_HIGHSCORE')">
+		<!--<a href="/Minesweeper/HIGHSCORE/Global/">All global top plays.</a> // Disabled. Maybe reactivated in the future. -->
 		<div id="wrapper"></div>
 	</body>
 </html>
