--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 		<div id="wrapper"></div>
 
-		<a href="/Minesweeper/Higescore/">All local top plays.</a>
+		<a href="/Minesweeper/Highscore/">All local top plays.</a>
 
 		<table id="topPlays">
 			<tr class="header-row">
