--- a/Highscore/Global/index.html
+++ b/Highscore/Global/index.html
@@ -10,12 +10,13 @@
 		<link rel="icon" sizes="192x192" href="https://docs.google.com/drawings/d/e/2PACX-1vS9vABXBpNkgVVQ5PfPKOsBkYSnjJYmup-phMENEU_apPcuV-XFsuDci61ziInPZphDboMW1EmfzyUy/pub?w=192&h=192">
 
 		<link rel="stylesheet" href="/Minesweeper/Stylesheet.css">
-		<link rel="stylesheet" href="/Minesweeper/Higescore/Stylesheet.css">
+		<link rel="stylesheet" href="/Minesweeper/Highscore/Stylesheet.css">
+
+		<script>alert('This page is currently disabled.'); location.href = '/Minesweeper/Highscore/'</script><!-- // Disabled. Maybe reactivated in the future. -->
 		<script type="text/javascript" src="/Minesweeper/JavaScript.js"></script>
 	</head>
 
-	<body onload="onload('LOCAL_HIGESCORE')">
-		<!--<a href="/Minesweeper/Higescore/Global/">All global top plays.</a> // Disabled. Maybe reactivated in the future. -->
+	<body onload="onload('GLOBAL_HIGHSCORE')">
 		<div id="wrapper"></div>
 	</body>
 </html>
