--- a/Highscore/index.html
+++ b/Highscore/index.html
@@ -7,7 +7,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="mobile-web-app-capable" content="yes">
-		<link rel="icon" sizes="192x192" href="https://docs.google.com/drawings/d/e/2PACX-1vS9vABXBpNkgVVQ5PfPKOsBkYSnjJYmup-phMENEU_apPcuV-XFsuDci61ziInPZphDboMW1EmfzyUy/pub?w=192&h=192">
+		<link rel="icon" sizes="192x192" href="https://raw.githubusercontent.com/ChrisAcrobat/Minesweeper/main/img/mine.svg?raw=true">
 
 		<link rel="stylesheet" href="/Minesweeper/Stylesheet.css">
 		<link rel="stylesheet" href="/Minesweeper/Highscore/Stylesheet.css">
