--- a/Multiplayer/index.html
+++ b/Multiplayer/index.html
@@ -32,7 +32,7 @@ Player 2</textarea>
 			<input id="timePerPlayer" type="number" min="1" value="30"/>
 		</div>
 
-		<div>Mines: <span id="mineCounter"></span></div>
+		<div>Mines: <span id="mineCounter"></span><span id="spacesLeft"></span></div>
 
 		<div id="multiplayer-wrapper">
 			<div id="time-wrapper">
